# carbon-iq

./: .gitignore  MONGODB_HANDOFF.md  README.md  blockchain_implementation.md  package-lock.json
anchor/: Anchor.toml
anchor/programs/carbon_iq/: Cargo.toml
anchor/programs/carbon_iq/src/: lib.rs
anchor/tests/: carbon_iq.ts
api/: .env.example  dev.db  mongodb-mcp.example.json  package.json
api/prisma/: schema.prisma
api/src/: app.ts  index.ts
api/src/lib/: ensureDatabase.ts  prisma.ts
api/src/routes/: analyzeTransactions.ts  demoConnectBank.ts  greenScore.ts  leaderboard.ts  simulateStake.ts  stakingInfo.ts
api/src/services/: behaviorIncentiveService.ts  demoBankLedgerService.ts  emissionsService.ts  greenScoreService.ts  stakeExecutionService.ts  suggestionsService.ts  transactionProviderService.ts  walletDataService.ts
api/tests/: api.test.ts
contracts/src/: index.ts  routes.ts  schemas.ts  types.ts
web/: index.html  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/dashboard/: CarbonFootprintChart.tsx  GreenScoreDisplay.tsx
web/src/components/layout/: Sidebar.tsx
web/src/components/ui/: Button.tsx  Card.tsx  Progress.tsx  Slider.tsx
web/src/hooks/: useGreenScore.ts  useSolanaStaking.ts
web/src/lib/: api.ts  demoBank.ts
web/src/lib/anchor/: idl.ts
web/src/pages/: Dashboard.tsx  Leaderboard.tsx  Staking.tsx  Swaps.tsx
