[package]
name = "carbon-iq"
version = "0.1.0"
description = "CarbonIQ – on-chain proof of environmental impact"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_iq"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
